--- a/wave-homepage/index.html
+++ b/wave-homepage/index.html
@@ -8,36 +8,41 @@
         <div class= "navbar">
           <ul>
             <li class= "nav-wave">Wave~</li>
-            <li class= "searchbar"><form>Search: <input type="text" name="searchbar"></form>
+            <li class= "searchbar"><form>User Search: <input type="text" name="searchbar"></form>
           </ul>
         </div>
         </div>
         <div class= "main">
           <div class= "main-text-1">
-            This is <span class= "wave">Wave </span>!
+            <span class= "head-w">W</span>elcome to <span class= "wave">Wave </span>
           </div>
             <div class= "main-text-2">
-              Let your thoughts flow away
+              Let your thoughts flo<span class="main-w">w</span> a<span class="main-w">w</span>ay...
             </div>
             <div class= "login">
               <form>Login:<br/><input type="text" name="login"></form>
-              <form>Password:<br/><input type="text" name="password"></form>
+              <form>Password:<br/><input type="text" name="password"></form><br/>
             </div>
+            <div class="outter-enter"></div>
+          <div class="enter"><a href="#">ENTER</a></div>
             <div class="register">
-              <div>New to <span class="wave">wave</span>? Register <a href= "#">Here</a>.</div>
+              <div>New to <span class="medium-wave">Wave</span>? Register <a href= "#">Here</a>.</div>
             </div>
-                <div class="forgot-user/pass">
-                  <div>Forgot your awesome <a href="#">username</a> or your secret <a href= "#">password</a>
-                    ? No worries, we got you!</div>
+                <div class="forgot-user">
+                  <div>Forgot your <i>a<span class="w">w</span>esome</i> <a href="#">username</a> or your <i>secret</i> <a href= "#">pass<span class="w">w</span>ord</a>? No <span class="w">w</span>orries, <span class="w">w</span>e got you!</div>
+                </div>
                     <div class= "footer">
                       <ul>
-                        <li><a href="#">About</a>
-                          <li><a href="#">Help</a>
-                            <li><a href="#">Terms</a>
-                              <li><a href="#">Carreers</a>
-                                <li><a href="#">Developers</a>
-                                  <li><a href="#">Our Story</a>
-                                    <li class= "footer-special"><a href="#">2017</a><span class="wave">wave</span>
+                        <span class= "about"><li><a href="#">About</a></li></span>
+                          <li><a href="#">Help</a></li>
+                            <li><a href="#">Terms</a></li>
+                              <li><a href="#">Carreers</a></li>
+                                <li><a href="#">Developers</a></li>
+                                  <li><a href="#">Our Story</a></li>
+                                    <span class="footer-special"><li><a href="#">2017</a><span class="smaller-wave">wave</span></li></span>
+                                    </div>
+                                  </div>
+                                </div>
 
 
 
