minor changes to styling

--- a/wave-homepage/index.html
+++ b/wave-homepage/index.html
@@ -8,7 +8,7 @@
         <div class= "navbar">
           <ul>
             <li class= "nav-wave">Wave~</li>
-            <li class= "searchbar"><form>User Search: <input type="text" name="searchbar"></form>
+            <li class= "searchbar"><form>Forum Search: <input type="text" name="searchbar"></form>
           </ul>
         </div>
         </div>
@@ -24,7 +24,7 @@
               <form>Password:<br/><input type="text" name="password"></form><br/>
             </div>
             <div class="outter-enter"></div>
-          <div class="enter"><a href="#">ENTER</a></div>
+          <div class="enter"><a href="#">Login</a></div>
             <div class="register">
               <div>New to <span class="medium-wave">Wave</span>? Register <a href= "#">Here</a>.</div>
             </div>
