--- a/wave-homepage/index.html
+++ b/wave-homepage/index.html
@@ -8,7 +8,7 @@
         <div class= "navbar">
           <ul>
             <li class= "nav-wave">Wave~</li>
-            <li class= "searchbar"><form>Forum Search: <input type="text" name="searchbar"></form>
+            <li class= "searchbar"><form>Thread Search: <input type="text" name="searchbar"></form>
           </ul>
         </div>
         </div>
@@ -20,7 +20,7 @@
               Let your thoughts flo<span class="main-w">w</span> a<span class="main-w">w</span>ay...
             </div>
             <div class= "login">
-              <form>Login:<br/><input type="text" name="login"></form>
+              <form>Username:<br/><input type="text" name="login"></form>
               <form>Password:<br/><input type="text" name="password"></form><br/>
             </div>
             <div class="outter-enter"></div>
